@@ -1435,15 +1435,8 @@ function show_pricing_history(appid, type) {
 			get_http("http://api.enhancedsteam.com/pricev2/?search=" + type + "/" + appid + "&stores=" + storestring + "&cc=" + cc, function (txt) {
                 var data = JSON.parse(txt);
                 if (data) {
-                    var activates = "";
-                    var line1 = "";
-                    var line2 = "";
-					var html = "";
-                    var recorded,
-						currency_symbol,
-						comma = false,
-						at_end = false;
-						
+                    var activates, line1 = "", line2 = "", line3 = "", html, recorded, currency_symbol, comma = false, at_end = false;
+					
 					switch (data[".meta"]["currency"]) {
 						case "GBP":
 							currency_symbol = "£";
@@ -1462,7 +1455,15 @@ function show_pricing_history(appid, type) {
                         line2 = localized_strings[language].historical_low + ': ' + formatMoney(escapeHTML(data["lowest"]["price"].toString()), 2, currency_symbol, ",", comma ? "," : ".", at_end) + ' at ' + escapeHTML(data["lowest"]["store"].toString()) + ' on ' + recorded.toDateString() + ' (<a href="' + escapeHTML(data["urls"]["history"].toString()) + '" target="_blank">Info</a>)';
                     }
 					
-					html = "<div class='game_purchase_area_friends_want' style='padding-top: 5px; height: 35px; border-top: 1px solid #4d4b49; border-left: 1px solid #4d4b49; border-right: 1px solid #4d4b49;' id='enhancedsteam_lowest_price'><div class='gift_icon' style='margin-top: -9px;'><img src='" + chrome.extension.getURL("img/line_chart.png") + "'></div>";
+					if (data["bundles"]["count"] > 0) {
+						line3 = "<br>" + localized_strings[language].bundle.bundle_count + ": " + data["bundles"]["count"] + ' (<a href="' + escapeHTML(data["urls"]["bundle_history"].toString()) + '" target="_blank">Info</a>)';
+					}
+					
+					if (data["bundles"]["count"] > 0) {
+						html = "<div class='game_purchase_area_friends_want' style='padding-top: 5px; height: 50px; border-top: 1px solid #4d4b49; border-left: 1px solid #4d4b49; border-right: 1px solid #4d4b49;' id='enhancedsteam_lowest_price'><div class='gift_icon' style='margin-top: -4px;'><img src='" + chrome.extension.getURL("img/line_chart.png") + "'></div>";
+					} else {
+						html = "<div class='game_purchase_area_friends_want' style='padding-top: 5px; height: 35px; border-top: 1px solid #4d4b49; border-left: 1px solid #4d4b49; border-right: 1px solid #4d4b49;' id='enhancedsteam_lowest_price'><div class='gift_icon' style='margin-top: -9px;'><img src='" + chrome.extension.getURL("img/line_chart.png") + "'></div>";
+					}	
 					
         			if (data["price"]) {
                         if (data["price"]["drm"] == "steam") {
@@ -1471,15 +1472,11 @@ function show_pricing_history(appid, type) {
                     			activates = "";
                     		}
                     	}
-
-                        line1 = localized_strings[language].lowest_price + ': ' + formatMoney(escapeHTML(data["price"]["price"].toString()), 2, currency_symbol, ",", comma ? "," : ".", at_end) + ' at <a href="' + escapeHTML(data["price"]["url"].toString()) + '" target="_blank">' + escapeHTML(data["price"]["store"].toString()) + '</a> ' + activates + ' (<a href="' + escapeHTML(data["urls"]["info"].toString()) + '" target="_blank">Info</a>)';
-                        $("#game_area_purchase").before(html + line1 + "<br>" + line2);
-                    } else {
-                        if (data["lowest"]) {
-                            html = "<div class='game_purchase_area_friends_want' style='padding-top: 15px; height: 30px; border-top: 1px solid #4d4b49; border-left: 1px solid #4d4b49; border-right: 1px solid #4d4b49;' id='enhancedsteam_lowest_price'><div class='gift_icon' style='margin-top: -9px;'><img src='" + chrome.extension.getURL("img/line_chart.png") + "'></div>";
-                            $("#game_area_purchase").before(html + line2);
-                        }
+						
+                        line1 = localized_strings[language].lowest_price + ': ' + formatMoney(escapeHTML(data["price"]["price"].toString()), 2, currency_symbol, ",", comma ? "," : ".", at_end) + ' at <a href="' + escapeHTML(data["price"]["url"].toString()) + '" target="_blank">' + escapeHTML(data["price"]["store"].toString()) + '</a> ' + activates + ' (<a href="' + escapeHTML(data["urls"]["info"].toString()) + '" target="_blank">Info</a>)';                        
                     }
+					
+					$("#game_area_purchase").before(html + line1 + "<br>" + line2 + line3);
 					
 					if (data["bundles"]["active"].length > 0) {
 						var length = data["bundles"]["active"].length;
